force-app/main/default/objects/SubGroup__c/SubGroup__c.object-meta.xml
<CustomObject>
    <label>Sub Group</label>
    <nameField>
        <label>Sub Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sub Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>