force-app/main/default/objects/SubGroup__c/fields/GenerateConditionsSheet__c.field-meta.xml
<CustomField>
    <fullName>GenerateConditionsSheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Generate Conditions Sheet</label>
    <type>Checkbox</type>
</CustomField>