force-app/main/default/objects/SubGroup__c/fields/HierarchyCode__c.field-meta.xml
<CustomField>
    <fullName>HierarchyCode__c</fullName>
    <externalId>true</externalId>
    <label>Hierarchy Code</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>