force-app/main/default/objects/SubGroup__c/fields/MainGroup__c.field-meta.xml
<CustomField>
    <fullName>MainGroup__c</fullName>
    <label>Main Group</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ProductMainGroup</valueSetName>
    </valueSet>
</CustomField>